[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/character_roundGreen.png" type="Texture" id=1]
[ext_resource path="res://Character/Player.gd" type="Script" id=2]
[ext_resource path="res://Character/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/drawKnife1.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 16.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 81
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
position = Vector2( -24, -48 )
scale = Vector2( 0.25, 0.25 )

[node name="HealthTimer" type="Timer" parent="."]
autostart = true

[node name="Weapon" type="Node2D" parent="."]

[node name="SpawnPoint" type="Node2D" parent="Weapon"]
position = Vector2( 32, 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Weapon"]
stream = ExtResource( 4 )
volume_db = 10.0
[connection signal="timeout" from="HealthTimer" to="." method="_on_HealthTimer_timeout"]
